--- a/students/senay/dia-20/index.html
+++ b/students/senay/dia-20/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia 21/01</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Hola</h1>
-    <script src="ej1-jose.js"></script>
+    <h4>Hola Mundo</h4>
+    <script src="ej2.js"></script>
 </body>
 
 </html>
